--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "hydrawiki/embedvideo",
+	"name": "hydrawiki/embedingcode",
 	"version": "2.8.0",
 	"type": "mediawiki-extension",
 	"description": "Adds a parser function embedding video from popular sources.",
